[package]
name = "simply-login"
version = "0.1.0"
authors = ["ntk <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.125"
rust-crypto = "0.2.36"
sqlx = { version = "0.5.2", features = ["runtime-async-std-native-tls", "mysql"] }
async-std = { version = "1.9", features = [ "attributes" ] }